--- a/Css_Components/Chat.css
+++ b/Css_Components/Chat.css
@@ -1,10 +1,10 @@
-html, body {
+/*html, body {
     height: 100%;
     margin: 0;
     padding: 0;
 
     }
-
+*/
 .groups-chat{
     width: 450px;
     height:690PX;
