--- a/Css_Components/Gallery.css
+++ b/Css_Components/Gallery.css
@@ -4,23 +4,46 @@
     background-color: rgba(218, 218, 218, 0);
 }
 
-
-.card{
+#card-img{
+    width: 14rem;
+    height: 10rem;
+    align-self: center;
+    margin-top: 10px;
+    margin-right:20px;
+}
+#card-fav{
     width: 18rem;
     height: 18rem;
     margin:0px 0px 0px 0px ;
     background-color: rgba(233, 233, 233, 0.569);
 
 }
-p{
-    font-size: 15px;
+#row-galeria{
+    padding: 10px 0px 10px 10px ;
 }
-.card-img-top{
-    width: 14rem;
-    height: 10rem;
-    align-self: center;
-    margin-top: 10px;
+#col-galeria{
+    padding: 0px 0px 0px 0px ;
+    width: 100px;
 }
+.container2
+{
+    
+    margin:0px 0px 0px 0px;
+    padding-left: 140px;
+    padding-right: 20px;
+    justify-content: end;
+}
+.general-list{
+    padding-left: 50px;
+   /*overflow-y: scroll;*/
+}
+
+
+.card-body > p{
+    font-size: 12px;
+}
+
+/*
 .card >i{
     position: absolute;
     left :5px;
@@ -29,21 +52,8 @@ p{
     height: 30px;
     
 }
-.col{
-    padding: 0px 0px 0px 0rem ;
-    width: 100px;
-}
-.row{
-    padding: 10px 0px 10px 10px ;
-}
-.container2
-{
-    
-    margin:0px 0px 0px 0px;
-    padding-left: 140px;
-    justify-content: end;
-}
-.general-list{
-    padding-left: 120px;
-   /*overflow-y: scroll;*/
-}
+
+
+
+
+*/
